--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ config/initializers/secret_token.rb
 
 ## Environment normalization:
 /.bundle
-/vendor/bundle
+/vendor/bundler/
 
 # these should all be checked in to normalize the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
